--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,8 @@
   --text-gray: #373737;
   --placeholder-gray: #A3A3A3;
   --text-white: #D4D4D4;
+  --user-bubble: #4A5C6A;
+  --bot-bubble: #2E2E2E;
 }
 
 
@@ -21,4 +23,5 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
