--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 :root {
   /* colors palette*/
-  --bg-blue: #06141B;
+  --bg-blue: #0d2b3c;
   --bg-gray: #171717;
   --bg-black: #0A0A0A;
   --input-gray: #262626;
@@ -12,16 +12,17 @@
 }
 
 
-body {
+body, #root {
   font-family: "Poppins", serif;
   background-color: var(--bg-blue);
   color: var(--text-white);
   height: 100vh;
 }
 
-#root {
+main {
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
